# vimrs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  TODOS  keys.list  rust-toolchain.toml  test.toml  vim.toml
.github/workflows/: build.yml  fmt.yml  rust.yml
doc/examples/evoluent-vertical-mouse-4/: evremap.toml
examples/: exclusive.toml
src/: deviceinfo.rs  main.rs  mapping.rs  remapper.rs
wiki/: README.md  architecture.md  chord_suppression.md  cli.md  configuration.md  development.md  event_pipeline.md  extending.md  modules.md
