[package]
name = "evremap"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
evdev-rs = "0.6.2"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"
