[package]
name = "evremap"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
evdev-rs = "0.6.1"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"


[profile.release]
strip = true
lto = "fat"
# debug = 1
codegen-units = 1
# overflow-checks = false
panic = "abort"
